# server3

./: .gitignore  Cargo.toml  Dockerfile  LICENSE.md  README.md  config.example.styx
.github/workflows/: ci.yml
crates/server3-test-support/: Cargo.toml
crates/server3-test-support/src/: lib.rs
src/: app.rs  cache.rs  config.rs  lib.rs  main.rs  store.rs  upstream.rs
src/store/: cache.rs  http.rs
src/upstream/: cache.rs  fallthrough.rs  http.rs  s3.rs
tests/: test_cache.rs  test_upstream_fallthrough.rs
tests/test_utils/: mod.rs
