[package]
name = "server3"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["macros"] }
bytes = "1.11.0"
bytesize = { version = "2.3.1", features = ["serde"] }
clap = { version = "4.5.54", features = ["derive"] }
figment = { version = "0.10.19", features = ["env"] }
futures = "0.3.31"
hex = "0.4.3"
http-body = "1.0.1"
humantime-serde = "1.1.1"
lru = "0.16.3"
metrics = "0.24.3"
metrics-exporter-prometheus = "0.18.1"
pin-project-lite = "0.2.16"
reqwest = { version = "0.13.1", features = ["json", "stream"] }
rlimit = "0.10.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_styx = "2.0.0"
tempfile = "3.24.0"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = "0.1.18"
tokio-util = { version = "0.7.18", features = ["io"] }
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
url = { version = "2.5.7", features = ["serde"] }
uuid = { version = "1.19.0", features = ["v4"] }

[dev-dependencies]
bstr = "1.12.1"
mockito = "1.7.1"
